--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 torch = { version = "^2", source="torch"}
 pydantic = "^2.10.6"
 requests = "^2.32.3"
+pyfunctional = "^1.5.0"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.14.1"
