--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,7 @@
 [mypy]
-files = shortcut_summarizer, tests
+files = src
 disallow_untyped_calls = True
 disallow_untyped_defs = True
+
+[mypy-functional.*]
+ignore_missing_imports = True
