--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ torch = { version = "^2", source="torch"}
 pydantic = "^2.10.6"
 requests = "^2.32.3"
 pyfunctional = "^1.5.0"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.14.1"
