--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ python = "^3.12"
 torch = { version = "^2", source="torch"}
 pydantic = "^2.10.6"
 requests = "^2.32.3"
-pyfunctional = "^1.5.0"
 python-dotenv = "^1.0.1"
+streamable = "^1.4.7"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.14.1"
