--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,23 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-torch = { version = "^2", source="torch"}
 pydantic = "^2.10.6"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
 streamable = "^1.4.7"
-pytest = "^8.3.4"
 notion-client = "^2.3.0"
 
-[tool.poetry.group.dev.dependencies]
+torch =   [
+    { url = "https://download.pytorch.org/whl/cpu/torch-2.6.0-cp312-none-macosx_11_0_arm64.whl", markers = "platform_system == 'Darwin' and platform_machine == 'arm64'" },
+    { version = "^2.6", markers = "platform_system == 'linux'", source="pytorch-cpu" }
+]
+
+[[tool.poetry.source]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+priority = "explicit"
+
+[tool.poetry.group.dev.
 mypy = "^1.14.1"
 types-requests = "^2.32.0.20241016"
 pylint = "^3.3.3"
@@ -29,15 +37,6 @@ pytest = "^8.3.4"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[[tool.poetry.source]]
-name = "torch"
-url = "https://download.pytorch.org/whl/rocm6.2"
-secondary = true
-
-[tool.poetry.plugins.dotenv]
-ignore = "false"
-location = ".env.dev"
-
 [tool.black]
 line-length = 79
-target-version = ["py39"]
+target-version = ["py312"]
