--- a/mypy.ini
+++ b/mypy.ini
@@ -2,3 +2,7 @@
 files = src
 disallow_untyped_calls = True
 disallow_untyped_defs = True
+
+# Ignore requests
+[mypy-requests]
+ignore_missing_imports = True
