--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,13 +17,14 @@ torch =   [
     { url = "https://download.pytorch.org/whl/cpu/torch-2.6.0-cp312-none-macosx_11_0_arm64.whl", markers = "platform_system == 'Darwin' and platform_machine == 'arm64'" },
     { version = "^2.6", markers = "platform_system == 'linux'", source="pytorch-cpu" }
 ]
+types-requests = "^2.32.0.20241016"
 
 [[tool.poetry.source]]
 name = "pytorch-cpu"
 url = "https://download.pytorch.org/whl/cpu"
 priority = "explicit"
 
-[tool.poetry.group.dev.
+[tool.poetry.group.dev.dependencies]
 mypy = "^1.14.1"
 types-requests = "^2.32.0.20241016"
 pylint = "^3.3.3"
