--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,8 @@ build-backend = "poetry.core.masonry.api"
 [tool.black]
 line-length = 79
 target-version = ["py312"]
+
+[tool.isort]
+profile = "black"
+line_length = 79
+multi_line_output = 3
