--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,10 @@ requests = "^2.32.3"
 python-dotenv = "^1.0.1"
 streamable = "^1.4.7"
 notion-client = "^2.3.0"
-
-torch =   [
-    { url = "https://download.pytorch.org/whl/cpu/torch-2.6.0-cp312-none-macosx_11_0_arm64.whl", markers = "platform_system == 'Darwin' and platform_machine == 'arm64'" },
-    { version = "^2.6", markers = "platform_system == 'linux'", source="pytorch-cpu" }
-]
 types-requests = "^2.32.0.20241016"
+transformers = "^4.48.3"
+sentencepiece = "^0.2.0"
+torch = "^2.6.0"
 
 [[tool.poetry.source]]
 name = "pytorch-cpu"
