--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ types-requests = "^2.32.0.20241016"
 transformers = "^4.48.3"
 sentencepiece = "^0.2.0"
 torch = "^2.6.0"
+mistralai = "^1.5.0"
 
 [[tool.poetry.source]]
 name = "pytorch-cpu"
